--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -233,6 +233,7 @@
     <Content Include="Angular\app.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\sb-admin.css" />
     <Content Include="Content\Site.css">
       <DependentUpon>Site.scss</DependentUpon>
     </Content>
@@ -255,6 +256,7 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
+    <Content Include="Content\home.scss" />
     <None Include="Properties\PublishProfiles\konsorcjumlekarz - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\konsorcjumlekarz - Web Deploy.pubxml" />
     <Content Include="Scripts\angular.min.js.map" />
