--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -231,6 +231,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Angular\app.js" />
+    <Content Include="Angular\appComponent\appComponent.html" />
+    <Content Include="Angular\appComponent\appComponent.js" />
+    <Content Include="Angular\navbarComponent\navbarComponent.html" />
+    <Content Include="Angular\navbarComponent\navbarComponent.js" />
+    <Content Include="Angular\singlePanelComponent\singlePanelComponent.html" />
+    <Content Include="Angular\singlePanelComponent\singlePanelComponent.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\sb-admin.css" />
@@ -248,6 +254,7 @@
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\angularComponentRoute.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Site.scss" />
@@ -257,6 +264,8 @@
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
     <Content Include="Content\home.scss" />
+    <Content Include="Content\aside-navbar.scss" />
+    <Content Include="Content\mixin.scss" />
     <None Include="Properties\PublishProfiles\konsorcjumlekarz - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\konsorcjumlekarz - Web Deploy.pubxml" />
     <Content Include="Scripts\angular.min.js.map" />
