Update user register. Fixed styles.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -214,7 +214,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\DoctorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -315,7 +314,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
-    <Content Include="Views\Doctor\DoctorList.cshtml" />
+    <Content Include="Views\Home\UserAuthorize.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
