--- a/Model/KonsorcjumLekarzy.Database.csproj
+++ b/Model/KonsorcjumLekarzy.Database.csproj
@@ -51,59 +51,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\DoctorRepository.cs" />
-    <Compile Include="Interfaces\IDoctorRepository.cs" />
-    <Compile Include="Doctor.cs">
-      <DependentUpon>ModelORM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DoctorType.cs">
-      <DependentUpon>ModelORM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelORM.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelORM.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelORM.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelORM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModelORM.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ModelORM.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DoctorRepository.cs" />
+    <Compile Include="Repository\IDoctroRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="ModelORM.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelORM.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="App.Config" />
-    <None Include="ModelORM.edmx.diagram">
-      <DependentUpon>ModelORM.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ModelORM.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ModelORM.Context.cs</LastGenOutput>
-      <DependentUpon>ModelORM.edmx</DependentUpon>
-    </Content>
-    <Content Include="ModelORM.edmx.sql" />
-    <Content Include="ModelORM.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ModelORM.cs</LastGenOutput>
-      <DependentUpon>ModelORM.edmx</DependentUpon>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
