--- a/KonsorcjumLekarzy/KonsorcjumLekarzy.DAL/KonsorcjumLekarzy.DAL.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy.DAL/KonsorcjumLekarzy.DAL.csproj
@@ -30,7 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,16 +47,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Migrations\201704231916199_Init-migrations.cs" />
+    <Compile Include="Migrations\201704231916199_Init-migrations.Designer.cs">
+      <DependentUpon>201704231916199_Init-migrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DoctorRepository.cs" />
     <Compile Include="Repository\IDoctroRepository.cs" />
+    <Compile Include="Model\KonsorcjumContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Model\KonsorcjumLekarzy.Database.csproj">
       <Project>{732443fe-0f2d-463c-a695-f05221f29527}</Project>
       <Name>KonsorcjumLekarzy.Database</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704231916199_Init-migrations.resx">
+      <DependentUpon>201704231916199_Init-migrations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
