--- a/Model/App.Config
+++ b/Model/App.Config
@@ -4,7 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="ModelORMContainer" connectionString="metadata=res://*/ModelORM.csdl|res://*/ModelORM.ssdl|res://*/ModelORM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=KonsorcjumLekarzy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="ModelORMContainer" connectionString="metadata=res://*/ModelORM.csdl|res://*/ModelORM.ssdl|res://*/ModelORM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=KonsorcjumLekarzy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KonsorcjumDBContainer" connectionString="metadata=res://*/KonsorcjumDB.csdl|res://*/KonsorcjumDB.ssdl|res://*/KonsorcjumDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=C:\Users\michal\Documents\Projects\Konsorcjum\KonsorcjumLekarzy\KonsorcjumLekarzy\KonsorcjumLekarzy\App_Data\aspnet-KonsorcjumLekarzy-20170323090922.mdf;initial catalog=aspnet-KonsorcjumLekarzy-20170323090922;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
