--- a/KonsorcjumLekarzy/KonsorcjumLekarzy.DAL/KonsorcjumLekarzy.DAL.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy.DAL/KonsorcjumLekarzy.DAL.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\DoctorRepository.cs" />
-    <Compile Include="Repository\IDoctroRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Model\KonsorcjumContext.cs" />
   </ItemGroup>
   <ItemGroup>
