--- a/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
@@ -77,9 +77,8 @@
     <Compile Include="Model\Specialization.cs" />
     <Compile Include="Model\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\DoctorRepository.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\SpecializationRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
