--- a/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201704242006440_ThirdMigations.Designer.cs">
       <DependentUpon>201704242006440_ThirdMigations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704271926126_FourthMigrations-UpdatePropRequired.cs" />
+    <Compile Include="Migrations\201704271926126_FourthMigrations-UpdatePropRequired.Designer.cs">
+      <DependentUpon>201704271926126_FourthMigrations-UpdatePropRequired.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Doctor.cs" />
     <Compile Include="Model\IdentityModels.cs" />
@@ -78,7 +82,10 @@
     <Compile Include="Model\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\DoctorRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\PatientRepository.cs" />
+    <Compile Include="Repository\SpecializationRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -93,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704242006440_ThirdMigations.resx">
       <DependentUpon>201704242006440_ThirdMigations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704271926126_FourthMigrations-UpdatePropRequired.resx">
+      <DependentUpon>201704271926126_FourthMigrations-UpdatePropRequired.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
