--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Web.config
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Web.config
@@ -25,6 +25,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm" />
+    <roleManager enabled="true" />
   </system.web>
   <system.webServer>
     <modules>
