--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -229,7 +229,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DoctorService.cs" />
-    <Compile Include="Services\IDoctorService.cs" />
+    <Compile Include="Services\IGenericService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
