--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -579,6 +579,7 @@
     <Content Include="Areas\Administration\Views\Specialization\Create.cshtml" />
     <Content Include="Areas\Administration\Views\Specialization\Edit.cshtml" />
     <Content Include="Areas\Administration\Views\Specialization\Delete.cshtml" />
+    <Content Include="Areas\Administration\Views\Patient\Index.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
@@ -712,7 +713,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Administration\Models\" />
-    <Folder Include="Areas\Administration\Views\Patient\" />
+    <Folder Include="Areas\Administration\Views\Shared\Patient\" />
+    <Folder Include="Areas\Administration\Views\User\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
