--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -580,6 +580,10 @@
     <Content Include="Areas\Administration\Views\Specialization\Edit.cshtml" />
     <Content Include="Areas\Administration\Views\Specialization\Delete.cshtml" />
     <Content Include="Areas\Administration\Views\Patient\Index.cshtml" />
+    <Content Include="Areas\Administration\Views\Patient\Details.cshtml" />
+    <Content Include="Areas\Administration\Views\Patient\Edit.cshtml" />
+    <Content Include="Areas\Administration\Views\Patient\Create.cshtml" />
+    <Content Include="Areas\Administration\Views\Patient\Delete.cshtml" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
