--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -269,10 +269,14 @@
     <Content Include="Angular\pages\doctors\selectPanel\GroupSelectpickerOptions.js" />
     <Content Include="Angular\pages\doctors\selectPanel\select.html" />
     <Content Include="Angular\pages\doctors\selectPanel\selectPickerPanel.component.js" />
+    <Content Include="Angular\pages\doctors\tables\tables.module.js" />
+    <Content Include="Angular\pages\doctors\tables\TablesPageCtrl.js" />
+    <Content Include="Angular\pages\doctors\tables\templates\smartTable.html" />
     <Content Include="Angular\pages\pages.module.js" />
     <Content Include="Angular\pages\bookingVisit\visit.component.js" />
     <Content Include="Angular\pages\bookingVisit\bookingvisit.html" />
     <Content Include="Angular\pages\bookingVisit\visit.module.js" />
+    <Content Include="Angular\services\data.services.js" />
     <Content Include="Angular\theme\components\backTop\backTop.directive.js" />
     <Content Include="Angular\theme\components\backTop\backTop.html" />
     <Content Include="Angular\theme\components\backTop\lib\jquery.backTop.min.js" />
@@ -701,6 +705,9 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <None Include="Properties\PublishProfiles\inzynieriainternetowa - Web Deploy.pubxml" />
+    <Content Include="Scripts\smart-table.js" />
+    <Content Include="Scripts\smart-table.min.js" />
+    <Content Include="Scripts\smart-table.min.js.map" />
     <None Include="Scripts\_references.js" />
     <Content Include="Scripts\_references_BACKUP_10292.js" />
     <Content Include="Scripts\_references_BASE_10292.js" />
